# Srivatsen_HW-FW_Test_Fork

./: .gitignore  CMakeLists.txt  Open_Loop_Check_1.csv  buildAllFirmware.bat  flashAllFirmware.bat  main_log  openocd.cfg  patch_image_header.py
Inc/: bor.h  fdcan.h  get_flags.h  main.h  pvd.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h
Utility/can-tp-module-threadx/: can_tp_app.c  can_tp_app.h
Utility/can-tp-module-threadx/isotp-c/src/isotp/: isotp_types.h  receive.c
interface/: stm32h7x.cfg
lib/ApplicationLayer/: FOC.c  FOC.h  FOC_data.c  FOC_private.h  FOC_types.h  Medhya.c  Medhya.h  Medhya_data.c  Medhya_private.h  Medhya_types.h  Open_loop6.c  Open_loop6.h  Open_loop6_data.c  Pegasus_MBD.c  Pegasus_MBD.h  Position_Calculation.c  Position_Calculation.h  Position_Calculation_data.c  adc_AL.c  adc_AL.h  can_debug_and_sanity.c  can_debug_and_sanity.h  config.c  config.h  crc32.c  crc32.h  eepromCRC.c  eepromCRC.h  eeprom_AL.c  eeprom_AL.h  fdcan_AL.c  fdcan_AL.h  flash.c  flash.h  foc_blockset.c  foc_blockset.h  foc_mtpa_lut.c  foc_mtpa_lut.h  led_AL.c  led_AL.h  (+16 more)
lib/ApplicationLayer/Common/: rt_logging.c  rtwtypes.h
lib/Bootloader/: bootloaderFunctions.c  bootloaderFunctions.h  bootloaderMain.c  bootloaderMain.h
lib/CustomLibs/: enums.h  firmware_upgrade_app.c  firmware_upgrade_app.h  macros.h  math_func.c  math_func.h  structures.h
lib/DriverLayer/: dr_devices.h
lib/Memory/: memoryMap.h
linkerScripts/: app1.ld  app2.ld  master.ld  memory_map.ld
src/: adc.c  bor.c  dma.c  fdcan.c  get_flags.c  gpio.c  i2c.c  main.c  pvd.c  stm32h7xx_it.c  system_stm32h7xx.c  tim.c  usart.c
